# WILLI-7

./: platformio.ini
docs/ota/: latest.json
include/: data.h  dataWilli.h  ota_state.h
src/: lv_conf.h  main.cpp  smartwificonfig.cpp  webserverOTA.cpp
src/app/: app.cpp  app_globals.cpp  app_globals.h
src/beep/: beep_mgr.cpp  beep_mgr.h
src/events/: events.cpp
src/gfx/: LGFX_ESP32S3_RGB_MakerfabsParallelTFTwithTouch70.h
src/gui/: gui.cpp
src/ota/: ota_mgr.cpp  ota_mgr.h  webserverOTA.cpp
src/pruebas/: i2s.txt  lv_conf_conflicto.txt  main.txt  (+3 more)
src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/fonts/: ui_font_Big_2.c  ui_font_Medium_26.c  ui_font_Number.c  ui_font_Small.c
src/ui/images/: ui_img_bg1_png.c  ui_img_gauge_velocidad_png.c  ui_img_icn_actualizar_png.c  ui_img_icn_arrow_left_png.c  ui_img_icn_arrow_png.c  ui_img_icn_clock_png.c  ui_img_icn_minus_png.c  ui_img_icn_modo_png.c  ui_img_icn_ok_png.c  ui_img_icn_pasadas_png.c  ui_img_icn_plus_png.c  ui_img_icn_reinit_png.c  ui_img_icn_run_png.c  ui_img_icn_series_png.c  ui_img_icn_settings_png.c  ui_img_icn_update_png.c  ui_img_icn_wifi_png.c  ui_img_icn_x2_png.c  ui_img_logoj2f_png.c  ui_img_rgb_png.c  ui_img_settings_down_png.c  ui_img_settings_up_png.c  ui_img_speed_indicator_png.c  ui_img_txt_conectar_png.c  ui_img_txt_desconectar_png.c
src/ui/screens/: ui_CONFIG.c  ui_CONFIG.h  ui_HOME.c  ui_HOME.h  ui_INICIO.c  ui_INICIO.h  ui_PROGRAMADO.c  ui_PROGRAMADO.h  ui_PROGRAMADO_2.c  ui_PROGRAMADO_3.c
tools/: copy_fw_to_pages.py
(+18 files in other folders)
